Fixes label, input and error message spacings in org and person lookup (#2828)
* fixes person lookup label, input and error message spacings

* fixes organisation lookup label, input and error message spacings

* moves label padding bottom css to label component instead if no children (i.e. it is not wrapped around the component to label)

--- a/src/app-components/Label/Label.module.css
+++ b/src/app-components/Label/Label.module.css
@@ -14,3 +14,7 @@
 .description {
   padding-bottom: var(--fds-spacing-2);
 }
+
+.labelPadding {
+  padding-bottom: var(--fds-spacing-2);
+}
