--- a/src/layout/OrganisationLookup/OrganisationLookupComponent.module.css
+++ b/src/layout/OrganisationLookup/OrganisationLookupComponent.module.css
@@ -16,13 +16,13 @@
 /* breakpoints-md */
 @media only screen and (min-width: 840px) {
   .componentWrapper {
-    grid-template-columns: repeat(2, minmax(250px, 250px)) auto;
+    grid-template-columns: minmax(250px, 250px) auto;
+    grid-template-rows: repeat(4, min-content);
     grid-template-areas:
       'orgnrLabel .'
       'orgnr submit'
       'orgname .'
       'apiError .';
-    align-items: end;
     column-gap: var(--fds-spacing-6);
   }
   .submit {
@@ -32,26 +32,28 @@
 
 .componentWrapper {
   display: grid;
+  align-items: start;
 
   .orgnrLabel {
     grid-area: orgnrLabel;
-    align-self: start;
   }
 
   .orgnr {
     grid-area: orgnr;
-    align-self: start;
   }
 
   .orgname {
-    margin-top: var(--fds-spacing-1);
+    padding-top: var(--fds-spacing-2);
     grid-area: orgname;
-    align-self: start;
   }
 
   .submit {
     grid-area: submit;
-    align-self: start;
     white-space: nowrap;
+  }
+
+  .apiError {
+    grid-area: apiError;
+    padding-top: var(--fds-spacing-2);
   }
 }
